--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,13 @@ jobs:
           go-version: '1.23'
           cache: true
       - name: Go mod download
+        working-directory: backend
         run: go mod download
       - name: Go test
+        working-directory: backend
         run: go test ./...
       - name: Go build
+        working-directory: backend
         run: go build ./...
 
   frontend:
