--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   api:
     build:
-      context: .
+      context: ./backend
     depends_on:
       db:
         condition: service_healthy
