Add proxy service to docker-compose, enhance config with environment variable support, and improve DLP keyword detection

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ frontend/npm-debug.log*
 sdk/node/node_modules
 sdk/python/.venv
 sdk/python/__pycache__
+proxy/certs
 
 # Docker/Compose artifacts
 *.pid
