--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,17 @@ services:
     ports:
       - "8081:80"
 
+  proxy:
+    image: nginx:1.25-alpine
+    depends_on:
+      api:
+        condition: service_started
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./proxy/certs:/etc/nginx/certs:ro
+    ports:
+      - "8443:8443"
+
 volumes:
   db_data:
 
