--- a/sample/gui/package.json
+++ b/sample/gui/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "aiguardrails-frontend",
+  "name": "aiguardrails-sample-gui",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -15,11 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "@vue/test-utils": "^2.4.4",
-    "jsdom": "^24.0.0",
-    "vite": "^5.0.0",
     "typescript": "^5.3.0",
-    "vitest": "^1.6.0"
+    "vite": "^5.0.0"
   }
 }
 
