--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+RUN npm install
 COPY . .
-ARG VITE_API_BASE=http://api:8080
+ARG VITE_API_BASE=/v1
 ARG VITE_ADMIN_TOKEN=changeme-admin
 ENV VITE_API_BASE=${VITE_API_BASE}
 ENV VITE_ADMIN_TOKEN=${VITE_ADMIN_TOKEN}
@@ -11,6 +11,8 @@ RUN npm run build
 
 FROM nginx:1.25-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
 
