--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:20-alpine AS build
 WORKDIR /app
+# 使用淘宝npm镜像加速
+RUN npm config set registry https://registry.npmmirror.com
 COPY package.json ./
 RUN npm install
 COPY . .
@@ -14,5 +16,6 @@ COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
 
 
